--- a/seminario.bib
+++ b/seminario.bib
@@ -699,6 +699,37 @@ pages={1282},
 	addendum={some refs about solar system formation models}
 	}
 
+@article{pinilla2015sequential,
+	title={Sequential planet formation in the HD 100546 protoplanetary disk?},
+	author={Pinilla, P and Birnstiel, T and Walsh, C},
+	journal={Astronomy \& Astrophysics},
+	volume={580},
+	pages={A105},
+	year={2015},
+	publisher={EDP Sciences}
+}
+
+@article{drkazkowska2016close,
+	title={Close-in planetesimal formation by pile-up of drifting pebbles},
+	author={Dr{\k{a}}{\.z}kowska, J and Alibert, Yann and Moore, Ben},
+	journal={Astronomy \& Astrophysics},
+	volume={594},
+	pages={A105},
+	year={2016},
+	publisher={EDP Sciences}
+}
+
+@article{hasegawa2012evolutionary,
+	title={Evolutionary tracks of trapped, accreting protoplanets: the origin of the observed mass-period relation},
+	author={Hasegawa, Yasuhiro and Pudritz, Ralph E},
+	journal={The Astrophysical Journal},
+	volume={760},
+	number={2},
+	pages={117},
+	year={2012},
+	publisher={IOP Publishing}
+}
+
 @article{morbidelli2016challenges,
 	title={Challenges in planet formation},
 	author={Morbidelli, Alessandro and Raymond, Sean N},
