--- a/pps-seminario.tex
+++ b/pps-seminario.tex
@@ -146,18 +146,16 @@ I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Quel
 La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata sulla base dell'architettura orbitale del sistema solare e della composizione chimica solare, dei pianeti e dei corpi minori.
 \end{errata}
 
-\begin{workout}[frammentazione di nube molecolare e form azione di disco di accrescimento attorno a stella giovane: citazione tscharnuter]
-	L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene.
-	Le teorie attuali prevedono che i sistemi planetarii si formino nella fas efinale di formazione stellare: il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
-\end{workout}
+L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene.
+Le teorie attuali prevedono che i sistemi planetarii si formino nella fase finale di formazione stellare: il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
 
-\begin{workout}[Oggetto seminario: intro formazione sistema solare, esosistemi verso simulazioni formazione.]
 % (\cite{lissauer1993planet}).
 A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono state sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari: \'e possibile una verifica dei meccanismi di formazione che prescinda dalle condizioni particolari di un singolo sistema.
------
-In questo seminario considero le caratteristiche della popolazione planetaria sintetica basata sul modello di Berna (\cite{mordasini2018planetary}): in particolare il confronto tra distribuzione in massa, raggio planetarii e frequenza planetaria in funzione metallicit\'a stellare con quelli osservati tramite velocit\'a radiale e transiti; inoltre considero la frequenza delle sottopolazioni di pianeti giganti, pianeti con periodo minore di \SI{100}{\day} e pianeti abitabili.
+%\cite{tscharnuter2009protostellar}
+
+In questo seminario considero le caratteristiche della popolazione planetaria sintetica basata sul modello di Berna (\cite{mordasini2018planetary}): in particolare il confronto tra distribuzione in massa, raggio planetarii e frequenza planetaria in funzione della metallicit\'a stellare con quelli osservati tramite velocit\'a radiale e transiti; inoltre considero la frequenza delle sottopolazioni di pianeti giganti, pianeti con periodo minore di \SI{100}{\day} e pianeti abitabili.
 %---Confronto con planetary traps branch
-\end{workout}
+
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Vincoli ai modelli di formazione planetaria}
