--- a/seminario.bib
+++ b/seminario.bib
@@ -10,6 +10,28 @@ pages={1282},
   addendum={}
 }
 
+@article{yin2002short,
+	title={A short timescale for terrestrial planet formation from Hf--W chronometry of meteorites},
+	author={Yin, Qingzhu and Jacobsen, SB and Yamashita, K and Blichert-Toft, J and T{\'e}louk, Ph and Albarede, F},
+	journal={Nature},
+	volume={418},
+	number={6901},
+	pages={949},
+	year={2002},
+	publisher={Nature Publishing Group}
+}
+
+@article{tscharnuter2009protostellar,
+	title={Protostellar collapse: rotation and disk formation},
+	author={Tscharnuter, Werner M and Sch{\"o}nke, Johannes and Gail, H-P and Trieloff, M and L{\"u}ttjohann, E},
+	journal={Astronomy \& Astrophysics},
+	volume={504},
+	number={1},
+	pages={109--113},
+	year={2009},
+	publisher={EDP Sciences}
+}
+
 @article{mayor1995jupiter,
   title={A Jupiter-mass companion to a solar-type star},
   author={Mayor, Michel and Queloz, Didier},
