--- a/sources.sty
+++ b/sources.sty
@@ -4,4 +4,4 @@
 \graphicspath{ {figures/},{figures/mordasini18/}, {figures/crida/}, {figures/perryman14/}, {figures/mayor11-RV/},{figures/howard12-T/}, {figures/haisch01-tau/}, {figures/Andrews10-diskdistro/}, {figures/wright09/}, {figures/baraffe10/}, {figures/weidenschilling77/}, {figures/winnfabrycky15/}, {figures/petigura13/}, {figures/fressin13-FPK/}, {figures/armitage07/}, {figures/goupilZM-pdint/}, {figures/benz14/}, {figures/fulton17/}, {figures/exoplanet.eu/},{figures/guillot15/},{figures/mamajek09/},{figures/kleynelson12/}, {figures/M12characterizationMR/}}
 
 %%% input rawdata
-%\input{rawdata.tex}
+\input{rawdata.tex}
