completed mass-radius thought

--- a/seminario.bib
+++ b/seminario.bib
@@ -657,6 +657,50 @@ pages={1282},
   publisher={EDP Sciences}
 }
 
+@article{cumming2004detectability,
+	title={Detectability of extrasolar planets in radial velocity surveys},
+	author={Cumming, Andrew},
+	journal={Monthly Notices of the Royal Astronomical Society},
+	volume={354},
+	number={4},
+	pages={1165--1176},
+	year={2004},
+	publisher={Blackwell Science Ltd}
+}
+
+@article{lopez2013role,
+	title={The role of core mass in controlling evaporation: The Kepler radius distribution and the Kepler-36 density dichotomy},
+	author={Lopez, Eric D and Fortney, Jonathan J},
+	journal={The Astrophysical Journal},
+	volume={776},
+	number={1},
+	pages={2},
+	year={2013},
+	publisher={IOP Publishing}
+}
+
+@article{ribas2005evolution,
+	title={Evolution of the solar activity over time and effects on planetary atmospheres. I. High-energy irradiances (1-1700 {\AA})},
+	author={Ribas, Ignasi and Guinan, Edward F and G{\"u}del, Manuel and Audard, Marc},
+	journal={The Astrophysical Journal},
+	volume={622},
+	number={1},
+	pages={680},
+	year={2005},
+	publisher={IOP Publishing}
+}
+
+@article{guillot2005interiors,
+	title={The interiors of giant planets: Models and outstanding questions},
+	author={Guillot, Tristan},
+	journal={Annu. Rev. Earth Planet. Sci.},
+	volume={33},
+	pages={493--530},
+	year={2005},
+	publisher={Annual Reviews}
+}
+
+
 @article{mayor2011harps,
   title={The HARPS search for southern extra-solar planets XXXIV. Occurrence, mass distribution and orbital properties of super-Earths and Neptune-mass planets},
   author={Mayor, Michel and Marmier, M and Lovis, Ch and Udry, S and S{\'e}gransan, D and Pepe, F and Benz, W and Bertaux, J-L and Bouchy, F and Dumusque, X and others},
