--- a/sources.sty
+++ b/sources.sty
@@ -1,7 +1,7 @@
 \ProvidesPackage{sources}
 \addbibresource{seminario.bib}
 
-\graphicspath{ {figures/},{figures/mordasini18/}, {figures/crida/}, {figures/perryman14/}, {figures/mayor11-RV/},{figures/howard12-T/}, {figures/haisch01-tau/}, {figures/Andrews10-diskdistro/}, {figures/wright09/}, {figures/baraffe10/}, {figures/weidenschilling77/}, {figures/winnfabrycky15/}, {figures/petigura13/}, {figures/fressin13-FPK/}, {figures/armitage07/}, {figures/goupilZM-pdint/}, {figures/benz14/}, {figures/fulton17/}, {figures/exoplanet.eu/},{figures/guillot15/},{figures/mamajek09/},{figures/kleynelson12/}, {figures/M12characterizationMR/}}
+\graphicspath{ {figures/},{figures/mordasini18/}, {figures/crida/}, {figures/perryman14/}, {figures/mayor11-RV/},{figures/howard12-T/}, {figures/haisch01-tau/}, {figures/Andrews10-diskdistro/}, {figures/wright09/}, {figures/baraffe10/}, {figures/weidenschilling77/}, {figures/winnfabrycky15/}, {figures/petigura13/}, {figures/fressin13-FPK/}, {figures/armitage07/}, {figures/goupilZM-pdint/}, {figures/benz14/}, {figures/fulton17/}, {figures/exoplanet.eu/},{figures/guillot15/},{figures/mamajek09/},{figures/kleynelson12/}, {figures/M12characterizationMR/}, {figures/guillot05/}, {figures/seager07/}}
 
 %%% input rawdata
 \input{rawdata.tex}
